First custom styles

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,80 +1,145 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+
+
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #D71709;
+  --ion-color-primary-rgb: 215,23,9;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #bd1408;
+  --ion-color-primary-tint: #db2e22;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary: #FEFDEB;
+  --ion-color-secondary-rgb: 254,253,235;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0,0,0;
+  --ion-color-secondary-shade: #e0dfcf;
+  --ion-color-secondary-tint: #fefded;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+  --ion-color-tertiary: #A1E3B5;
+  --ion-color-tertiary-rgb: 161,227,181;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0,0,0;
+  --ion-color-tertiary-shade: #8ec89f;
+  --ion-color-tertiary-tint: #aae6bc;
 
   /** success **/
   --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
+  --ion-color-success-rgb: 45,211,111;
   --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
+  --ion-color-success-contrast-rgb: 255,255,255;
   --ion-color-success-shade: #28ba62;
   --ion-color-success-tint: #42d77d;
 
   /** warning **/
-  --ion-color-warning: #ffc409;
-  --ion-color-warning-rgb: 255, 196, 9;
+  --ion-color-warning: #F9C04E;
+  --ion-color-warning-rgb: 249,192,78;
   --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac08;
-  --ion-color-warning-tint: #ffca22;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #dba945;
+  --ion-color-warning-tint: #fac660;
 
   /** danger **/
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
+  --ion-color-danger: #ff0000;
+  --ion-color-danger-rgb: 255,0,0;
   --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #e00000;
+  --ion-color-danger-tint: #ff1a1a;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
+  --ion-color-dark: #241825;
+  --ion-color-dark-rgb: 36,24,37;
   --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #201521;
+  --ion-color-dark-tint: #3a2f3b;
 
   /** medium **/
-  --ion-color-medium: #92949c;
-  --ion-color-medium-rgb: 146, 148, 156;
+  --ion-color-medium: #5a5a5a;
+  --ion-color-medium-rgb: 90,90,90;
   --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
+  --ion-color-medium-contrast-rgb: 255,255,255;
+  --ion-color-medium-shade: #4f4f4f;
+  --ion-color-medium-tint: #6b6b6b;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
+  --ion-color-light: #d1d1d1;
+  --ion-color-light-rgb: 209,209,209;
   --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #b8b8b8;
+  --ion-color-light-tint: #d6d6d6;
+
+
+
+  /*
+  https://ionicframework.com/docs/theming/themes
+  Esquema de colores de mi tema:
+  Rojo (Rosso Corsa) → D71709
+  Verde claro (Celadon) → A1E3B5
+  Amarillo Claro (Ivory) → FEFDEB
+  Naranja medio (Maximumn Yellow Red) → F9C04E
+  Negro/Purpúra (Dark Purple) → 241825
+  */
+
+
+  /* Color del fondo */
+  --ion-background-color: #FEFDEB;
+  --ion-background-color-rgb: 254,253,235;
+
+ 
+
+  /* Color de bordes */
+  --ion-border-color: #241825;
+
+  /* Color sombras de cajas */
+  --ion-box-shadow-color: #000000;
+
+
+  /*
+  --ion-toolbar-background: #0d0d0d;
+
+  --ion-item-background: #000000;
+
+  --ion-card-background: #FCF6B1;
+  */
+
+
+  /* Color del texto */
+  --ion-text-color: #241825;
+  --ion-text-color-rgb: 36,24,37;
+  
+  --ion-color-step-50: #f3f2e1;
+  --ion-color-step-100: #e8e6d7;
+  --ion-color-step-150: #dddbcd;
+  --ion-color-step-200: #d2cfc3;
+  --ion-color-step-250: #c8c4ba;
+  --ion-color-step-300: #bdb8b0;
+  --ion-color-step-350: #b2ada6;
+  --ion-color-step-400: #a7a19c;
+  --ion-color-step-450: #9c9692;
+  --ion-color-step-500: #918b88;
+  --ion-color-step-550: #867f7e;
+  --ion-color-step-600: #7b7474;
+  --ion-color-step-650: #70686a;
+  --ion-color-step-700: #655d60;
+  --ion-color-step-750: #5b5157;
+  --ion-color-step-800: #50464d;
+  --ion-color-step-850: #453a43;
+  --ion-color-step-900: #3a2f39;
+  --ion-color-step-950: #2f232f;
 }
+
+
+
 
 @media (prefers-color-scheme: dark) {
   /*
